[gd_scene load_steps=9 format=3 uid="uid://br2nsy0y5n4uh"]

[ext_resource type="Texture2D" uid="uid://bwsaa37f62uyw" path="res://assets/sprites/objects/treasure-chest.png" id="1_3se45"]
[ext_resource type="Script" uid="uid://cxu5x2v085eib" path="res://scripts/chest.gd" id="1_m5ma0"]
[ext_resource type="Texture2D" uid="uid://cnfboe4d0p2wo" path="res://assets/sprites/npc/arrow.png" id="2_uih34"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uih34"]
atlas = ExtResource("1_3se45")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5ma0"]
atlas = ExtResource("1_3se45")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vdnua"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uih34")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5ma0")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3se45"]
size = Vector2(32, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uih34"]
size = Vector2(21, 36)

[node name="Chest" type="StaticBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_m5ma0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vdnua")
metadata/_edit_lock_ = true

[node name="Arrow" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(0, -19)
scale = Vector2(1.01042, 1.01042)
texture = ExtResource("2_uih34")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_3se45")
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 27)
shape = SubResource("RectangleShape2D_uih34")

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
